# wayfish-launcher

./: CMakeLists.txt
src/: launcher.cpp  launchermodel.cpp  processprovider.cpp
